# omni-workspace

./: .env.example  .firebaserc  .gitignore  README.md  docker-compose.yml  firebase.json  firestore.rules  package-lock.json  package.json  rename_salomone.py  revertLinks.js  start.bat
.firebase/: hosting.ZnJvbnRlbmRcb3V0XHJlbmRlcmVy.cache
.github/workflows/: firebase-hosting-merge.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/src/: __init__.py  config.py  main.py  mcp_server.py
backend/src/agents/: __init__.py  base.py  manus.py  react_agent.py  tool_agent.py
backend/src/api/: __init__.py  routes.py  websocket.py
backend/src/browser/: __init__.py  browser_agent.py
backend/src/db/: settings_db.py
backend/src/desktop/: __init__.py  desktop_agent.py
backend/src/llm/: __init__.py  providers.py  router.py
backend/src/mcp/: __init__.py  client.py  hub.py
backend/src/memory/: __init__.py  agent_db.py  condenser.py
backend/src/orchestrator/: __init__.py  core.py  event_stream.py  session.py
backend/src/planning/: __init__.py  planner.py  planning_tool.py
backend/src/sandbox/: __init__.py  docker_workspace.py  models.py
backend/src/tools/: __init__.py  base.py  browser.py  file_ops.py  python_exec.py  terminal.py  web_search.py
config/: mcp_servers.json
frontend/: AGENTS.md  electron-builder.yml  electron.vite.config.ts  package.json  readme.md  tsconfig.json
frontend/.aionui/: FEATURE_CHANNELS.md  (+2 more)
frontend_old/: Dockerfile  index.html  package.json  vite.config.ts
sandbox-image/: Dockerfile  action_server.py  entrypoint.sh
(+1168 files in other folders)
