[project]
name = "salomoneui-backend"
version = "0.1.0"
description = "SalomoneUI — Multi-Agent Orchestration Platform Backend"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-socketio>=5.11.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "litellm>=1.50.0",
    "httpx>=0.27.0",
    "sentence-transformers>=3.3.0",
    "numpy>=1.26.0",
    "aiosqlite>=0.20.0",
    "docker>=7.1.0",
    "python-dotenv>=1.0.0",
    "cryptography>=43.0.0",
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]
desktop = [
    "pyautogui>=0.9.54",
    "mss>=9.0.0",
    "Pillow>=10.4.0",
]
browser = [
    "playwright>=1.48.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
